--- a/PROX/3RDPARTY/QHULL/QHULL/CMakeLists.txt
+++ b/PROX/3RDPARTY/QHULL/QHULL/CMakeLists.txt
@@ -1,33 +1,25 @@
-INCLUDE_DIRECTORIES(
-  ${PROJECT_SOURCE_DIR}/PROX/3RDPARTY/QHULL/QHULL/include
-  )
-
-FILE(
-  GLOB
+file(GLOB
   QHULL_SOURCES
   ${PROJECT_SOURCE_DIR}/PROX/3RDPARTY/QHULL/QHULL/src/*.c
   )
 
-FILE(
-  GLOB
+file(GLOB
   QHULL_HEADERS
   ${PROJECT_SOURCE_DIR}/PROX/3RDPARTY/QHULL/QHULL/include/*.h
   )
 
-ADD_LIBRARY(
-  qhull
+add_library(qhull
   ${QHULL_SOURCES}
   ${QHULL_HEADERS}
   )
 
-SET_TARGET_PROPERTIES(qhull PROPERTIES DEBUG_POSTFIX "D" )
+target_include_directories(qhull
+  PUBLIC
+  ${PROJECT_SOURCE_DIR}/PROX/3RDPARTY/QHULL/QHULL/include
+  )
 
-SET_TARGET_PROPERTIES(qhull PROPERTIES ARCHIVE_OUTPUT_DIRECTORY                "${PROJECT_SOURCE_DIR}/lib/")
-SET_TARGET_PROPERTIES(qhull PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_DEBUG          "${PROJECT_SOURCE_DIR}/lib/")
-SET_TARGET_PROPERTIES(qhull PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_RELEASE        "${PROJECT_SOURCE_DIR}/lib/")
-SET_TARGET_PROPERTIES(qhull PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_MINSIZEREL     "${PROJECT_SOURCE_DIR}/lib/")
-SET_TARGET_PROPERTIES(qhull PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_RELWITHDEBINFO "${PROJECT_SOURCE_DIR}/lib/")
-
-IF(CMAKE_GENERATOR MATCHES Xcode)		
-  SET_TARGET_PROPERTIES(qhull PROPERTIES XCODE_ATTRIBUTE_WARNING_CFLAGS "-Wall")
-ENDIF(CMAKE_GENERATOR MATCHES Xcode)
+install(
+  TARGETS qhull
+  RUNTIME DESTINATION ${PROJECT_SOURCE_DIR}/lib/}
+  COMPONENT library
+ )
