--- a/PROX/3RDPARTY/TetGen/CMakeLists.txt
+++ b/PROX/3RDPARTY/TetGen/CMakeLists.txt
@@ -1,18 +1,19 @@
-FILE(GLOB TetGen_HEADERS *.h )
-FILE(GLOB TetGen_SOURCES *.cxx )
 
-ADD_LIBRARY(tetgen
-	    ${TetGen_SOURCES}
-	    ${TetGen_HEADERS}
-            )
+add_library(tetgen
+  predicates.cxx
+  tetgen.cxx
+  tetgen.h
+  )
 
-SET(TetGen_DEF  "-D\"TETLIBRARY\"")
+target_compile_definitions(tetgen
+  PUBLIC
+  TETLIBRARY
+)
 
-SET_TARGET_PROPERTIES(tetgen PROPERTIES COMPILE_FLAGS ${TetGen_DEF})
-SET_TARGET_PROPERTIES(tetgen PROPERTIES DEBUG_POSTFIX "D" )
+install(
+  TARGETS tetgen
+  RUNTIME DESTINATION ${PROJECT_SOURCE_DIR}/lib/}
+  COMPONENT library
+  )
 
-SET_TARGET_PROPERTIES(tetgen PROPERTIES ARCHIVE_OUTPUT_DIRECTORY                "${PROJECT_SOURCE_DIR}/lib/")
-SET_TARGET_PROPERTIES(tetgen PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_DEBUG          "${PROJECT_SOURCE_DIR}/lib/")
-SET_TARGET_PROPERTIES(tetgen PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_RELEASE        "${PROJECT_SOURCE_DIR}/lib/")
-SET_TARGET_PROPERTIES(tetgen PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_MINSIZEREL     "${PROJECT_SOURCE_DIR}/lib/")
-SET_TARGET_PROPERTIES(tetgen PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_RELWITHDEBINFO "${PROJECT_SOURCE_DIR}/lib/")
+
