--- a/PROX/APPLICATIONS/RIGID_BODY/RIGID_BODY_GUI_SHARED/CMakeLists.txt
+++ b/PROX/APPLICATIONS/RIGID_BODY/RIGID_BODY_GUI_SHARED/CMakeLists.txt
@@ -22,7 +22,30 @@ add_library(rigid_body_gui_shared
   )
 
 source_group(Shaders FILES ${RIGID_BODY_GUI_SHARED_SHADERS} )
-  
+
+target_include_directories(rigid_body_gui_shared
+  PUBLIC
+  ${PROJECT_SOURCE_DIR}/PROX/3RDPARTY/TinyXML
+  ${PROJECT_SOURCE_DIR}/PROX/3RDPARTY/TetGen
+  ${PROJECT_SOURCE_DIR}/PROX/3RDPARTY/QHull/QHull/include
+  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/GL3/GL3/include    
+  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/UTIL/UTIL/include
+  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/TINY/TINY/include 
+  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/SPARSE/SPARSE/include 
+  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/GEOMETRY/GEOMETRY/include 
+  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/MESH_ARRAY/MESH_ARRAY/include
+  ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/MASS/MASS/include
+  ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/KDOP/KDOP/include
+  ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/NARROW/NARROW/include
+  ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/BROAD/BROAD/include
+  ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/PROX/PROX/include
+  ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/CONTENT/CONTENT/include 
+  ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/PROCEDURAL/PROCEDURAL/include 
+  ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/SIMULATORS/SIMULATORS/include
+  ${PROJECT_SOURCE_DIR}/PROX/APPLICATIONS/RIGID_BODY/RIGID_BODY_GUI_SHARED/include
+  ${PROJECT_SOURCE_DIR}/PROX/APPLICATIONS/RIGID_BODY/RIGID_BODY_GUI/include  
+)
+
 target_link_libraries(rigid_body_gui_shared
   PUBLIC
   gl3
@@ -50,32 +73,10 @@ target_link_libraries(rigid_body_gui_shared
   OpenGL::GL
   GLEW::glew
   glm::glm
-  ${Boost_SYSTEM_LIBRARIES} 
-  ${Boost_FILESYSTEM_LIBRARIES}
+  Boost::system
+  Boost::filesystem
 )
 
-target_include_directories(rigid_body_gui_shared
-  PUBLIC
-  ${PROJECT_SOURCE_DIR}/PROX/3RDPARTY/TinyXML
-  ${PROJECT_SOURCE_DIR}/PROX/3RDPARTY/TetGen
-  ${PROJECT_SOURCE_DIR}/PROX/3RDPARTY/QHull/QHull/include
-  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/GL3/GL3/include    
-  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/UTIL/UTIL/include
-  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/TINY/TINY/include 
-  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/SPARSE/SPARSE/include 
-  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/GEOMETRY/GEOMETRY/include 
-  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/MESH_ARRAY/MESH_ARRAY/include
-  ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/MASS/MASS/include
-  ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/KDOP/KDOP/include
-  ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/NARROW/NARROW/include
-  ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/BROAD/BROAD/include
-  ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/PROX/PROX/include
-  ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/CONTENT/CONTENT/include 
-  ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/PROCEDURAL/PROCEDURAL/include 
-  ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/SIMULATORS/SIMULATORS/include
-  ${PROJECT_SOURCE_DIR}/PROX/APPLICATIONS/RIGID_BODY/RIGID_BODY_GUI_SHARED/include
-  ${PROJECT_SOURCE_DIR}/PROX/APPLICATIONS/RIGID_BODY/RIGID_BODY_GUI/include  
-)
 
 target_compile_definitions(rigid_body_gui_shared
   PUBLIC
